// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formula > Formula includes [] with tail half-space 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "formula": "[x]",
        "raw": "[$ [x] ]",
        "type": "formula",
      },
    ],
    "type": "line",
  },
]
`;

exports[`formula > Formula includes [] without tail half-space 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "formula": "[x",
        "raw": "[$ [x]",
        "type": "formula",
      },
      {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`formula > Simple formula 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "formula": "\\frac{3}{2}^N",
        "raw": "[$ \\frac{3}{2}^N]",
        "type": "formula",
      },
    ],
    "type": "line",
  },
]
`;
